2008-07-23  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo: update node names and menus
	* .darcs-boring: resurrect this file after it was accidentally
	deleted

2008-06-25  Dustin J. Mitchell  <dustin@zmanda.com>

	* docs/buildbot.texinfo: Patch by Albert Hofkamp to use step
	instances universally in the documentation. (#305)

2008-06-25  Dustin J. Mitchell  <dustin@zmanda.com>

	* buildbot/status/builder.py: Upgrading from version 2 to 3
	of BuildStatus had an incorrect call to properties.update.
	Closes #295.

2008-06-13  Dustin J. Mitchell  <dustin@zmanda.com>

	* buildbot/status/web/grid.py: Sort the builders in the
	grid display (#300)

2008-06-01  Dustin J. Mitchell	<dustin@zmanda.com>

	* buildbot/buildslave.py buildbot/process/base.py
	buildbot/status/builder.py buildbot/status/web/slaves.py
	buildbot/test/test_slaves.py: short patch by Ben Hearsum to
	make the /buildslaves WebStatus? page a little more useful. It
	does do things: 1) bolds the 'slave is NOT connected' line
	to make it more visible 2) shows whether each slave is busy
	(building) or not (#278)

2008-05-26  Dustin J. Mitchell  <dustin@zmanda.com>

	* buildbot/process/factory.py buildbot/status/web/waterfall.py
	buildbot/steps/shell.py buildbot/test/test_steps.py
	docs/buildbot.texinfo: Patch by Neil Hemingway
	<nhemingway@googlemail.com> to add a PerlModuleTest step (#228)

2008-05-19  Dustin J. Mitchell  <dustin@zmanda.com>

	* buildbot/changes/dnotify.py buildbot/clients/base.py
	buildbot/clients/debug.py buildbot/clients/gtkPanes.py
	buildbot/dnotify.py buildbot/test/emit.py
	buildbot/test/emitlogs.py buildbot/test/sleep.py: Patch by
	Gianluca Sforna <giallu@gmail.com> to remove unnecessary
	shebangs about which rpmlint complains. (#282)

2008-05-17  Dustin J. Mitchell  <dustin@zmanda.com>

	* buildbot/test/test_vc.py: Configure username and email in
	case the user running trial does not have git config in their
	home directory. (#281)
